# sockett

./: .gitignore  README.md  cp_genomeer.sh  docker-compose-dev.yaml  docker-compose-prod.yaml
agent-ui/: .gitignore  CHANGELOG.md  Dockerfile  INSTALLATION.md  LICENSE  README.md  TROUBLESHOOTING.md  conf.json  hatch_build.py  modif.txt  package-lock.json  pyproject.toml  regen_tools_catalog.py  requirements.txt  run.sh  test_stream_debug.py
agent-ui/app/: auth.py  config.py  db.py  main.py  models.py  routes_auth.py  routes_chat.py  routes_settings.py
agent-ui/backend/: requirements.agent.txt  requirements.app.txt
agent-ui/docs/: CONTRIBUTING.md  apache.md
agent-ui/src/: app.html
agent-ui/static/: app copy.js  app.js  opensearch.xml  styles.css  tools_catalog.json
dataset/: README.md
dataset/02-datasource/: arxiv-paper.repo  bioconductor_all_tags.csv  bioconductor_all_tags_[filtered].csv  bioconductor_tags.json  bioconductor_tags_[filtered].json  biostars_all_tags.csv  biostars_all_tags_[filtered].csv  biostars_tags.json  biostars_tags_[filtered].json  category.json  note.md  qiime2_tags_[filtered].json  sources-forum.csv
dataset/03-scripts/: 01-biostars-BuildTagList.ipynb  01-biostars-MERGE.ipynb  01-biostars-QUERY.ipynb  01-biostars-TAG.ipynb  01-biostarts-FILTER.ipynb  02-biostackexchnage-FETCH.ipynb  prompt  (+10 more)
genomeer/: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  qa_suite.py
genomeer (copie)/: .env.example  pyproject.toml
genomeer/.github/workflows/: ci.yml
genomeer/btools/: bio_env_py310.yml  install_cli_tools.sh  r_packages.yml
genomeer/data/: card_top500.json  kegg_core_pathways.json
genomeer/scripts/: refresh_bundles.py
genomeer/src/genomeer/: config.py  logging.py  types.py
genomeer/src/genomeer/adapters/: ollama_client.py  openwebui_bridge.py  server.py
genomeer/src/genomeer/agent/: BA1.py  __init__.py  aq.py  executor.py  explainer.py  orchestrator.py  planner.py  temp.py
genomeer/src/genomeer/agent/v1/: BA1.py  __init__.py
genomeer/src/genomeer/agent/v2/: BioAgent.py  __init__.py  adaptive_rules.py  lora_constraints.py
genomeer/src/genomeer/agent/v2/utils/: artifacts_service.py  bio_hint.py  cache.py  instructions.py  quality_gate.py  state_graph.py  structured_output.py  tempdir.py  validator.py
genomeer/src/genomeer/evaluation/: __init__.py  benchmark.py
genomeer/src/genomeer/memory/: __init__.py  dark_matter.py  template_library.py
genomeer/src/genomeer/model/: bio_rag.py  feedback.py  retriever.py
genomeer/src/genomeer/runtime/: env_manager.py  env_resolver.py
genomeer/src/genomeer/runtime/pkgs/: readme.txt
genomeer/src/genomeer/runtime/registry/: amplicon-env1.yaml  default-agent.yaml  index.yaml  meta-env1-phase1.yaml  meta-env1.yaml  metagenomics-env.yaml
genomeer/src/genomeer/tasks/: blueprint.py
genomeer/src/genomeer/tools/:  tool_registry.py  __init__.py  base.py  py_runner.py  r_runner.py  registry.py  sh_runner.py
genomeer/src/genomeer/tools/builtin/: gc_content.py  kmers.py
genomeer/src/genomeer/tools/description/: artifacts.py  basic.py  genomics.py  longread.py  metagenomics.py  metagenomics_db.py  ncbi.py  sra.py  viromics.py
genomeer/src/genomeer/tools/function/: artifacts.py  basic.py  genomics.py  longread.py  metagenomics.py  metagenomics_db.py  ncbi.py  sra.py  viromics.py
genomeer/src/genomeer/tools/parsers/: __init__.py  parsers.py
genomeer/src/genomeer/tools/software/: resources.py
genomeer/src/genomeer/utils/: checkpoint.py  description.py  filesystem.py  helper.py  llm.py  metrics.py  resources.py  security.py  thresholds.py  version_tracker.py
genomeer/src/genomeer/utils/stream/: logstream.py  shared.py
genomeer/tests/: comparison_report.txt  genomeer_test_ollama_v2.ipynb  serve_lora.py  test_apertus_lora.ipynb  test_checkpoint.py  test_critical_bugs.py  test_notebook.ipynb  test_notebook_short.ipynb  test_quality_gate.py
genomeer/tests/01-hello-Word/: test_v2_helloword.ipynb
genomeer/tests/01-hello-word/: test_v2_helloword.ipynb
genomeer/tests/02-local-fasta/: sequence_tiny.fasta  test_v2_local.ipynb
genomeer/tests/03-ncbi-fetch/: test_v2_ncbi.ipynb
genomeer/tests/dev-unstable/: test_notebook_short.ipynb  test_stream.ipynb  test_v2_notebook.ipynb
genomeer/tests/e2e/: test_assembly_flow.py  test_benchmark_e2e.py  test_e2e_windows.py  test_pipeline_eval.py
genomeer/tests/e2e/benchmark_reports/: benchmark_20260504_160246.json  latest_summary.txt  windows_benchmark_20260506_103746.json
genomeer/tests/integration/: test_batch_orchestrator.py  test_rag_retrieval.py
genomeer/tests/unit/agent/: test_bioagent.py  test_checkpoint.py
genomeer/tests/unit/model/: test_biorag.py
genomeer/tests/unit/runtime/: test_security.py
genomeer/tests/unit/tools/: test_longread.py
genomeer/tests/unit/utils/: test_cache.py  test_helper_timeout.py  test_metrics.py  test_quality_gate.py  test_security.py
(+319 files in other folders)
